# kis-samsung-mock-auto-trader

./: .env.example  .gitignore  README.md  REFERENCES.md  RUNBOOK_KR.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
records/: README.md  trading_20260619.jsonl
samsung_trader/: __init__.py  account.py  api_client.py  auth.py  cli.py  clock.py  config.py  logging_setup.py  market_data.py  models.py  orders.py  persistence.py  trader.py
scripts/: publish_record.ps1  register_windows_task.ps1  run_trader.ps1  setup_secrets.ps1
tests/: test_api_client.py  test_clock.py  test_config.py  test_orders.py  test_persistence.py  test_services.py
